@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install setup test
+DEPEND=>=dev-libs/glib-2.30:2 >=sys-apps/dbus-1.1.0 >=dev-libs/dbus-glib-0.82 >=net-libs/telepathy-glib-0.18 dev-db/sqlite:3 dev-libs/libxml2 gnutls? ( >=net-libs/gnutls-2.10.2 ) !gnutls? ( >=dev-libs/openssl-0.9.8g[-bindist] ) jingle? ( || ( net-libs/libsoup:2.4[ssl] >=net-libs/libsoup-2.33.1 ) >=net-libs/libnice-0.0.11 ) !<net-im/telepathy-mission-control-5.5.0 || ( dev-lang/python:2.7 dev-lang/python:2.6 ) >=dev-util/gtk-doc-am-1.17 dev-libs/libxslt test? ( >=dev-python/twisted-core-0.8.2 >=dev-python/twisted-words-0.8.2 >=dev-python/dbus-python-0.83 )
+DESCRIPTION=A Jabber/XMPP connection manager, with handling of single and multi user chats and voice calls
+EAPI=5
+HOMEPAGE=http://telepathy.freedesktop.org
+IUSE=gnutls +jingle test
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-linux
+LICENSE=LGPL-2.1
+RDEPEND=>=dev-libs/glib-2.30:2 >=sys-apps/dbus-1.1.0 >=dev-libs/dbus-glib-0.82 >=net-libs/telepathy-glib-0.18 dev-db/sqlite:3 dev-libs/libxml2 gnutls? ( >=net-libs/gnutls-2.10.2 ) !gnutls? ( >=dev-libs/openssl-0.9.8g[-bindist] ) jingle? ( || ( net-libs/libsoup:2.4[ssl] >=net-libs/libsoup-2.33.1 ) >=net-libs/libnice-0.0.11 ) !<net-im/telepathy-mission-control-5.5.0
+SLOT=0
+SRC_URI=http://telepathy.freedesktop.org/releases/telepathy-gabble/telepathy-gabble-0.16.7.tar.gz
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	python-any-r1	06dec86544a782db0a4fd8a90092565d	python-utils-r1	3b392f7373bcc74b7c97ae0acd9ec0e6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=7d9be85afbadb6e312cb2ecfd79f61a8
