@@ -1,0 +1,14 @@
+DEFINED_PHASES=setup
+DEPEND=>=net-im/pidgin-2.7 >=net-libs/telepathy-glib-0.15.1[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] >=dev-libs/glib-2.30:2 >=dev-libs/dbus-glib-0.73 virtual/pkgconfig
+DESCRIPTION=Telepathy connection manager providing libpurple supported protocols.
+EAPI=5
+HOMEPAGE=http://developer.pidgin.im/wiki/TelepathyHaze
+IUSE=python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=>=net-im/pidgin-2.7 >=net-libs/telepathy-glib-0.15.1[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] >=dev-libs/glib-2.30:2 >=dev-libs/dbus-glib-0.73
+RESTRICT=test
+SLOT=0
+SRC_URI=http://telepathy.freedesktop.org/releases/telepathy-haze/telepathy-haze-0.7.1.tar.gz
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	python-single-r1	fa36040985cb5e3cdd31d44be94d15bc	python-utils-r1	3b392f7373bcc74b7c97ae0acd9ec0e6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=594e73e62f9e42a61ce273a789212d95
