@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST telepathy-gabble-0.16.6.tar.gz 2434346 SHA256 0a4726241f3e0ef6a42281eca954ff63948c44d2faa264242faa3a92fb02b792 SHA512 14dd6b16bbbea73fdb0f86f859bb658fba17232736622b45f7870bcd25143ea377d56deca165f54333af21ebc4d0d7e80fe62c76f7314be92f28bb1b52d2770f WHIRLPOOL a2cdbb3a522e849261ad3cdde35c2aabfc4e289311cad56d8fbe75f9a6eb7427a25104546a274b481c9af4d7db65d5e1e08e381052d270ff151fb92d73669895
+DIST telepathy-gabble-0.16.7.tar.gz 2429292 SHA256 78bda66e0cba42674728bf7efdae91ed576767ff5985a6a05bb9be195ce0c9bf SHA512 86573f8b812905f0696027b1f166e197439b4df5158d801883a3d4afd9a1f68714952e8ad1cc3002c0cdc5e68393cdd7cbd3dfcf2d8effbf8f1e699ec2b95437 WHIRLPOOL 3fae0b924c2d3f3ddec8a373afc14737257894888ec74ec529389372c525412aa25157e09f8a0d43acce3d0de9bfe09266e083d8f1fd49e66e56cc676b893a05
 EBUILD telepathy-gabble-0.16.6.ebuild 1783 SHA256 61ae3b61c55f54d3f5d9d8b532134601568ae04cb16d0e5bb02a020e5975110e SHA512 c930ee8e63e77fb18a54bcc32715d9fc1480aecac463ff874960653380b590e0861a4a35cdfa73bafda02f619d78617c813fb303ddb318bca478172761ee9c8a WHIRLPOOL 59d71408854a2104e8ba7ec7542596b46289465a1e14b420555d7224b2037f6ee56620b9c1e98474bc4a31236bfbd7d922443f9a06d58ea17946fcd6a348df83
-MISC ChangeLog 21165 SHA256 2619cb4b00235195f80e7fb65e3f9c3723291ac834f9900c650208930e24ff54 SHA512 f939e5b8e9ed0456ae8d251f60e67587f734fff43552916fdefc6c0feeb97f6d3174bf979c12bd5e17d7f772380fb48ea651ab906827107db08af86e845c174e WHIRLPOOL 0da8af12050a581cab778d06077ec5f252cd2f7fa09ce0eb31d2d7c68b18bc0585e8035a46e93e0e9abffc5c992997e8f8976e724b224952147b2a3c54d3af12
+EBUILD telepathy-gabble-0.16.7.ebuild 1862 SHA256 f8a2ab1fd53b426fd7bb32e6080662a1e48c7c609c9b01a6047219fe1cd16e69 SHA512 76c2355230bde9b204b9eb9c4bd976797f351eb33a63b855cd3226e637f08aa3b3a705f32bf2758178e2d960fde43fe7f50e8c2965f73fa9ef2e025dc999a522 WHIRLPOOL 01cc51b9b64a1b5fb9e32e8bf5b5859f014d558266779cf3f8a3254a42f4c0728a5a8931e56e254493f905331ab3b13ac2ddcaa302846940d6a01f440aacb3a8
+MISC ChangeLog 21302 SHA256 48e3171fa91c3a673c1d018ff45594a8ca62a3bb715afd1ae397db32f2b80f9a SHA512 5d6f63ca805302848af405682bdb5a9a991b867a300bdc8ae1b8b385d1d1df62cb13a00a30c9943d1cef1e2eed18a99d7206bf7fa8450ba01c4dc84c0b94a735 WHIRLPOOL a5f6486b8a004f8ba1c0b1f72c7174f308c5a2e2aac6e4bff1443738a4e84f5dfe1d639b90bf00351384f88a485c2a255ef25d831e9c0b989260319527f9866e
 MISC metadata.xml 179 SHA256 553e11f5d45a80ea3ec4e1100608c151ae15589a23d83dfe81531ae930a620c6 SHA512 3bd827b893a1636e862854b7fda9cc0677239ad65307b583e1f3aba4d50137b61142a9b87b91da167d736e7a72e23d8a88d13324579d775a7f7dc32001f6215d WHIRLPOOL 6f60c6b1fe6f343b84b0d2562231f16f302b94308846d96b4b77c39b7d86ff921768141f9438f01cbb6713f039126d6da62428c75d443d1173986ca3e20e6681
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIzpfYACgkQ1fmVwcYIWAbX5ACfSh9v6MJGuUxo7JkgR9LUhyU0
-EhMAoNAvfsCD+7rAhva4V/aH0rRVy0ah
-=iBkU
+iEYEAREIAAYFAlJHJTQACgkQCaWpQKGI+9TnZgCfepIrm+//B2aYff+cS4iXm7hh
+EdcAnRZKpYTZRRCcpRg327WxPVq6EwCB
+=xmxW
 -----END PGP SIGNATURE-----
