@@ -6,26 +6,16 @@ AUX 002-fix_resource_leakage.patch 4526 SHA256 2597e4bae0e23090de4d7edc7c13495ad
 AUX 003-fix_more_resource_leaks.patch 6663 SHA256 7423812e904da7600f25120ec4a428c917800cf7fa92f0c1aceb158f90c8bb9f SHA512 271533ecf415f4880675f68fa14c9057acefa95339b0e2cd2dfd10f39414a81f9dd1622b56ad8669b91f7f8f59ace3d9ba73499f66e4e937888d9b2a59e6d994 WHIRLPOOL 27a6cbe1adfbcc73eeaf02e0f9940425a34d8100a6deeaae0e642afcd930cc2ebda83a601e550f7ec3f218f0514dbe3061c825ddb392f6da8b65e46fe1f5eba2
 DIST telepathy-haze-0.6.0.tar.gz 558413 SHA256 e267c54aef8f85746899e365ae344fe9ec73c1aec04298bedad6a88732ab2fe3 SHA512 db87f7f1be4217ab464d3a3fdb33c6121931c286a102b6af7e3a06ece21b88606c41f3eabc1ad2453e58f5091f6a141dbf2369c7d277b135aebf9b0f37cbe2f0 WHIRLPOOL a8f29ee0aee83cddb386d55bbdbe7df2d77acfc936c1ce0e5786345c3e7a20d3d608e4df99b8e5ebc2fcd5644d7ecfa9641564561f9f538fc325259b0f31a52d
 DIST telepathy-haze-0.7.0.tar.gz 559037 SHA256 0b0143358af2435ec267cf62bd1c475e4d6e1f8e950e87bf7da3d288424152bd SHA512 9749ca9733f20b47da84412d35d7cc28d305fcfc8085450456914a6d7907de7cfb4de5e8f7c8e1b06e412feeed5dbc272c69ce889bedc0ac8598aae96beaf677 WHIRLPOOL e432ea9327ee2aa3b3a6a58b73eb916f9f4b45fee5518ce128dd03d705c82b9f3bc90ffd48e541170a28f688fc15f0675d44ce93f2f9e59b4aa37352e6fbc41b
+DIST telepathy-haze-0.7.1.tar.gz 577366 SHA256 2b9ad41af225cb997b1e7c719bf5a3990738b976bba49cb7ba74772453342c90 SHA512 3caeb86eaf2a71dcda0acdaaffa40c19282975dc0f43614f7954a2595ba836160047c483ee090c7cb265fb9eeb2ece2d94ff646458d76e1421a6dc33dad66fb3 WHIRLPOOL e8bee783cfafa5dd46dc2a0f34d73cffb6a2cfe700b684e796a13689772795e5815595c8a658c9f15c52dc82cc40f25054f191ed7bf8e2a856cf752f0007f777
 EBUILD telepathy-haze-0.6.0.ebuild 983 SHA256 7d94ee2fe751c588615f518c3b621dad9a68e77b37043a41c52a68416dc14ffb SHA512 ba7c4b890c029b2c8af0c94c27f138f6d1dd02028f0b3694586c4359f9af440cef8428483f4c72d0f9c4e525ee7e44613c38199ef292a14576d5770106334c23 WHIRLPOOL 3ef77de410fbc465c40469b775bf46e0c8f87018d2a8bcbcaa19d29b82f57e7d46373459bb13616e44ebf5cede296c514162b9c5af30c12c5611084851707248
 EBUILD telepathy-haze-0.7.0.ebuild 1150 SHA256 737c55854a4547e2070edbe86a2ab846df6b65cc382136ce56c405b3e3ecfb15 SHA512 5c2c2866e9037590d599f8aa65fb49e5a6b25f64cf4419c16ccdb14c37e06df603b07b917ff862751b29aa1452f445a0c8de48fa7970860865bf183eaa97be8c WHIRLPOOL fc2704e2d745d4dbf347ddecbc8f0d2f8fe7fff0b08e5e49d9be745466f35d077909c007bb9d324cfa4e1be4dc1fecf50629659ca24d9102057e8288fbf4bb9e
-MISC ChangeLog 5686 SHA256 44433d91437ca0ddf937c3c5280506f6c953801df4117511b30d731a55ec48e5 SHA512 277796335776fed966d5722f1d0f34d01d91f4ec79997ff7f22f52a99a292d224571546b37d7b03933f20f9e555c857e6a03adb0310a7faec58dc258ba1932d8 WHIRLPOOL 2a4910becebb354f680289f5dd2710d9ea50ee5c348717b99b9f3edd3de859d77fd5d24baf8a8554c9698c6cfc9ff6937a36f8de3934a9debf950d2aa527a2ae
+EBUILD telepathy-haze-0.7.1.ebuild 921 SHA256 23fc65fbafe7b3bd92a9a2fe1c2ebd1e2471888a556ae95bd35ff182a0cb412c SHA512 b4ec2ec9e28103dd620d018bc17cb5a52812d120efaac895fe1fe51bf16c4f2903add0d5786ac770039e6309868f308b7a015d73ac256d73e9ed2bc276967549 WHIRLPOOL bfc602d55dcb1d4768c262823e1acc9d0263e10186b029216c756534031af643ccbc2125dba7bb7f045d2c3ddb2148283d9b20ed3ac85db6f1fc08bee5437d38
+MISC ChangeLog 5814 SHA256 7ca6f1974fa13bcaddf43e6f40f5dfaeffc88c7a8a95ec408ad1c77cdd6735f4 SHA512 4418650485a1c3bdb410a93ac995a48a84d4fbebed72fb5ba661e720e27f1ed7a708ad421a05958ce932a117d3a5ea656ce5b58de793f878e9796268b05febba WHIRLPOOL 57c105d4390b0ada1633eee0f38cd17c24fe48966722a42d53eec1cf3f448aa9e8525a03702ae6f46358d7a71281ad9d773839bfe543f990374a8cef816b5aa6
 MISC metadata.xml 322 SHA256 0658eb62f074a6ca6adf1c572753ae025b4c1e9048d3d4c0529f98cf2cb6bfa3 SHA512 b0d4a71235e1d7b0c53baae758153e624c4d324389700bbdb4ea8983f0a7f808727ea9821f88efd9058bb739a7c6e3c07cc24fbc496156fabb300b3e7312bea6 WHIRLPOOL 0ec9fb4d4e13f14f744a25ee5a025dd430b08a2ea85413fa02b616b853e602ffec00c24bafd5c0c65cef876b741956b4f11fe8f1681164a2bff3f95b44dc66b0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSKNV2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOxj8QAJT2TGdBwF3MKBhUQF0GN10m
-MT5N2jxbNWqbjP4d9LWlNtY1rATpf9nE5wr+I290r6gsPhKdZcJfnPnVI8GJDcLF
-sPTi+sUaaXDTyXDx99nGc/Mzg+VoZ1t+6unCxZiw61cYeLTzZY1vVUUZDQevZ2ZG
-PWgZDFJ0NDNqUTMh5OUwEGdCn1lvGvOWu5ROQil9qCdlLdIw0HLIdQgdiwZN4zAG
-P/icLMMaBs4hNecVAv34GZ8cXaRF/YOe/FuLwy8p5hSNCp+dsIpRg4shQcSDvLOG
-n6YlXE+Qnw3r/iSLAtmpsrSpZ/tFsn9bExOR23+1ZBzTuvgBSQujo9XDuUZCoXSd
-c0n6UFAksh0RIIgckq+1BrUlZcN+ImH1xznh/7yiLUY+TsBxbAep8pLDRrRz00gf
-eoZxWk46hcNNVnjWnx37jF8pA9LybmxT2CDmKODLaZcfWzAy8UbjeFm0ZIEkNcGo
-T9H+e1d1A4M7OKJ/icJZga59E9oZmpdJAz7W3F3+UYRa+cohJ3nD23YU3ChY+/N3
-LQlPrkoamJknYeTA3bXjpXiBWZXpyYzilfBzzR1ARjSPlfZIjaY6ReKK7zD1IqP3
-QQvV8Y4bUFMpOatPfeRZGvrGc9gPtYYR+e8Kc8NQb6JuBDFjZha0fG4hPh+/7U52
-EeYTpM7/wi33aDgA7EAl
-=m595
+iEYEAREIAAYFAlJHJioACgkQCaWpQKGI+9SqrwCbBcSY8DDxgDSXsoNye7GNbEH/
+mNwAnAlHI2BxUwyazztOh17LFl9B8ZCa
+=XTEt
 -----END PGP SIGNATURE-----
